--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mediawiki API Practice</title>
+    <!-- Title -->
+    <title>Wikipedia API</title>
   </head>
   <body>
-    <h1>MediaWiki</h1>
+    <h1>WIKIPEDIA</h1>
+    <!-- input  -->
+    <input type="text" id="search-input" />
+    <!-- Button -->
+    <input type="button" value="button" id="btn" />
+
+    <!-- javascript -->
+    <script src="app.js"></script>
   </body>
 </html>
