add: empty paragraph box

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Title -->
     <title>Wikipedia API</title>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <h1>WIKIPEDIA</h1>
-    <!-- input  -->
     <input type="text" id="search-input" />
-    <!-- Button -->
     <input type="button" value="button" id="btn" />
+
+    <!-- result -->
+    <p class="city">hi</p>
 
     <!-- javascript -->
     <script src="app.js"></script>
